--- a/dogs.html
+++ b/dogs.html
@@ -18,20 +18,17 @@
     </header>
     <div id="container-content" class="content-container">
         <div class="inputs-container">
+            <div class="buttonsSelection">
             <button class="buttons" id="button-selector1">Shibe</button>
             <button class="buttons" id="button-selector2">Dogs</button>
+        </div>
             <form id="response-Search">
                 <input class="searchBar" id="search-ID" type="search" placeholder="Search any dog...">
                 <button class="buttons-small" type="submit">Submit</button>
             </form>
         </div>
-        <img id="dogImages0" src="">
-        <img id="dogImages1" src="">
-        <img id="dogImages2" src="">
-        <img id="dogImages3" src="">
-        <img id="dogImages4" src="">
     </div>
+
     <script src="./js/dogsAPI.js"></script>
 </body>
-
 </html>
