--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,28 +8,45 @@
     <title>Final-Project</title>
     <link rel="stylesheet" href="./css/styles.css">
 </head>
+
 <body>
     <header>
         <a id="homeTab" class="tabs" href="./index.html">Home</a>
         <a id="animalTab" class="tabs" href="./cats.html">Cats</a>
         <a id="dogTab" class="tabs" href="./dogs.html">Dogs</a>
     </header>
-    <div class="content-container-home">
-        <img id="home-page-image" src="" alt="">
+    <div id="home-Container" class="content-container-home">
         <section class="explaination-section">
-        <p>This website was created for those who just need to look at pictures of Animals in order to just forget about the rainy day.</p>
-        <p>Cat Page: To interact with the page just press on a generated fact to watch it fade out of the screen. To generate a new picture alongside new facts just press the button</p>
-        <p>Dog Page: To interact with the page press on any dog photo to watch it fade out of the screen. At all times there will be five dog phtots available. To change between only Shibe and all dogs just press the button and all photos will change to the button you have pressed. You are also able to search for dogs by breed <strong>Use lowercase letters when using the search function</strong></p>
+            <h2>Welcome!</h2>
+            <p>This website was created for those who just need to look at pictures of Animals in order to just forget
+                about the rainy day.</p>
+            <p>Cat Page: To interact with the page just press on a generated fact to watch it fade out of the screen. To
+                generate a new picture alongside new facts just press the button</p>
+            <p>Dog Page: To interact with the page press on any dog photo to watch it fade out of the screen. At all
+                times there will be five dog phtots available. To change between only Shibe and all dogs just press the
+                button and all photos will change to the button you have pressed. You are also able to search for dogs
+                by breed</p>
+            <p><strong><i>If you are looking for a sub-breed dog, put the breed name first then sub-breed in order for
+                        the search to work (E.g. hound blood, hound afghan, bulldog french)</i></strong></p>
 
-        <p>Special Thanks to the following APIs</p>
-        <ul class="api-list">
-            <li ><a class="link-api" href="https://shibe.online">Shibe.online API</a></li>
-            <li ><a class="link-api" href="https://github.com/wh-iterabb-it/meowfacts">MewoFacts API</a></li>
-            <li ><a class="link-api" href="https://dog.ceo/dog-api/documentation/random">Dog API</a></li>
-        </ul>
-        <p>Hope you enjoy the website!</p>
+            <p>Special Thanks to the following APIs</p>
+            <ul class="api-list">
+                <li><a class="link-api" href="https://shibe.online">Shibe.online API</a></li>
+                <li><a class="link-api" href="https://github.com/wh-iterabb-it/meowfacts">MewoFacts API</a></li>
+                <li><a class="link-api" href="https://dog.ceo/dog-api/documentation/random">Dog API</a></li>
+            </ul>
+            <p>Hope you enjoy the website!</p>
         </section>
     </div>
+    <script>
+        
+        // Adds image elemetns to the container-content Div
+        var imageElement = document.createElement("img");
+        imageElement.setAttribute("id", "home-page-image");
+        var divContainer = document.getElementById("home-Container");
+        divContainer.prepend(imageElement);
+    </script>
     <script src="./js/main.js"></script>
 </body>
+
 </html>
